--- a/07/06-packaging-docker/pom.xml
+++ b/07/06-packaging-docker/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>events-service</module>
         <module>registration-service</module>
+        <module>authorization-service</module>
     </modules>
 
     <properties>
