new services were added extensivley

--- a/07/06-packaging-docker/pom.xml
+++ b/07/06-packaging-docker/pom.xml
@@ -14,7 +14,7 @@
         <module>events-service</module>
         <module>registration-service</module>
         <module>authorization-service</module>
-        <module>settings-service</module>
+        <module>rentey-service</module>
     </modules>
 
     <properties>
