--- a/rentey-automation/rentey-service/pom.xml
+++ b/rentey-automation/rentey-service/pom.xml
@@ -18,6 +18,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.pluralsight.springboot</groupId>
+            <artifactId>rentey-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -55,4 +60,5 @@
     </build>
 
 </project>
+
 
