--- a/rentey-automation/import-customer-service/src/main/resources/application.yml
+++ b/rentey-automation/import-customer-service/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8090
+  max-http-header-size: 10MB
 
 spring:
   jackson:
@@ -8,6 +9,12 @@ spring:
       fail-on-invalid-subtype: false
       fail-on-null-for-primitives: false
     default-property-inclusion: non_null
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+  codec:
+    max-in-memory-size: 10MB
 
 rentey:
   service:
