--- a/rentey-automation/rentey-service/pom.xml
+++ b/rentey-automation/rentey-service/pom.xml
@@ -18,11 +18,6 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.pluralsight.springboot</groupId>
-            <artifactId>rentey-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -30,7 +25,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -60,5 +58,4 @@
     </build>
 
 </project>
-
 
