finzliang importing customer 2

--- a/rentey-automation/rentey-service/src/main/resources/application.yml
+++ b/rentey-automation/rentey-service/src/main/resources/application.yml
@@ -68,5 +68,7 @@ settings:
 csv:
   import:
     directory: rentey-service/customersToImport
+  export:
+    directory: rentey-service/importResults
 
 
