--- a/rentey-automation/rentey-service/src/main/resources/application.yml
+++ b/rentey-automation/rentey-service/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
       fail-on-invalid-subtype: false
       fail-on-null-for-primitives: false
     default-property-inclusion: non_null
+  profiles:
+    active: 1
 
 logging:
   file:
@@ -27,43 +29,6 @@ authorization:
       userNameOrEmailAddress: "ejaradmin"
       password: "123456"
       rememberClient: false
-
-#For rentey http://172.86.86.151:2800/
-#settings:
-#  api:
-#    base-url: http://172.86.86.151:2800
-#    headers:
-#      tenant-id: "1"
-#      user-agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:75.0) Gecko/20100101 Firefox/75.0"
-#      accept: "application/json"
-#      accept-language: "en"
-#      accept-encoding: "gzip, deflate"
-#      pragma: "no-cache"
-#      cache-control: "no-cache"
-#      expires: "Sat, 01 Jan 2000 00:00:00 GMT"
-#      x-requested-with: "XMLHttpRequest"
-#      aspnetcore-culture: "en"
-#      origin: "http://172.86.86.151:2800"
-#      referer: "http://172.86.86.151:2800/"
-
-#For rentey https://ejar-jor-test.iyelo.com:4900/
-settings:
-  api:
-    base-url: https://ejar-jor-test.iyelo.com:9900
-    api-base-path: /webapigw/api/services/app
-    headers:
-      tenant-id: "47"
-      user-agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:75.0) Gecko/20100101 Firefox/75.0"
-      accept: "application/json"
-      accept-language: "en"
-      accept-encoding: "gzip, deflate"
-      pragma: "no-cache"
-      cache-control: "no-cache"
-      expires: "Sat, 01 Jan 2000 00:00:00 GMT"
-      x-requested-with: "XMLHttpRequest"
-      aspnetcore-culture: "en"
-      origin: "https://ejar-jor-test.iyelo.com:9900/"
-      referer: "https://ejar-jor-test.iyelo.com:9900/"
 
 csv:
   import:
