--- a/rentey-automation/rentey-service/src/main/resources/application.yml
+++ b/rentey-automation/rentey-service/src/main/resources/application.yml
@@ -10,6 +10,20 @@ spring:
     default-property-inclusion: non_null
   profiles:
     active: 1
+  datasource:
+    url: jdbc:sqlserver://172.86.86.87;databaseName=YeloAutomationDB;encrypt=false
+    username: yelo_user
+    password: pass@600
+    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.SQLServerDialect
+        format_sql: true
+    open-in-view: false
 
 logging:
   file:
