--- a/rentey-automation/rentey-service/src/main/resources/user-defined-variables.properties
+++ b/rentey-automation/rentey-service/src/main/resources/user-defined-variables.properties
@@ -1,83 +1,73 @@
-# User Defined Variables
-# This file contains user-defined variables used throughout the application
-
-countryName=Saudi Arabia
-countryNameArabic=السعودية
-regionName=Automation Central Region
-cityName=Automation Riyadh
-globalCitySecondName=Automation Alula Second City
-fuelTypeName=Automation Gasoline 95
-branchName=Automation Branch
-branchName2=Automation Second Branch
-globalThirdBranchName=Automation Third Branch
-globalNameAutomationLocation=Automation Branch Location
-globalNameAutomationLocationThird=Automation Third Branch Location
-carModelName=Automation Accent
-carModelNameTwo=Automation Accent Two
-carCategoryName=Automation Small Sedan
-carCategoryNameTwo=Automation Small Sedan Two
-manufacturerName=Automation Hyundai
-sectorName=Automation Sector
-vendorName=Automation vendor for vehicles
-organizationName=Automation organization
-classificationName=Automation Classification
-workTemplateName=Automation working hours template
-globalLoyalityProgramName=Automation Loyality Program Amyali
-globalAccidentTypeName=Automation accident type
-globalComplaintsCategoryName=Automation complaint category
-globalLoginUserName=ejaradmin
-globaAdminUserName=ejaradmin
-globalEjarAdminEmail=ejaradmin@alwefaq.com
-globalOfferName=Automation Offer Name
-globalFirstExtraName=GPS
-globalSecondExtraName=Automation Child Seat extra
-globalThirdExtraName=Yelo Shield Plus
-globalFourthExtraName=Yelo Shield
-globalFifthExtraName=Unlimited Salik
-classificationNameForBroker=Companies
-globalCancelReasonBySystem=Automation Canceled By System
-globalCancelReasoNotSystem=Automation Customer Driving License expired
-globalSkeletonName=Automation Skeleton
-globalAccidentReportSourceName=Automation Accident Report Source
-globalEstimationPartyName=Automation Estimation Party
-globalTheftRequestRejectionReason=Automation Theft Request Rejection Reason
-globalOtherChargesName=Automation Other Charges
-globalLeasingExtraTypeName=Automation Leasing Extra Type
-globalOPLRejectionReasonName=Automation OPL Rejection Reason
-globalBookingAvailabilityName=Automation Booking Availability
-globalLiabilityLevel=Automation Liability Level
-globalColourName=Automation Blue Color
-globalAccidentCancelReason=Automation Accident Cancel Reason
-globalInternalLoyalityProgram=Automation Internal Loyality Program
-globalExternalLoyalty=Automation External Loyalty
-globalFeedbackType=Automation Feedback Type
-globalOccupationName=Automation Occupation Name
-globalLoyaltyProgram=Automation Loyalty Program
-globalTaxConfiguration=Automation Tax Configuration
-globalAccountManager=Automation Account Manager
-globalBankName=Automation Bank Name
-globalRentedVehicelsVendors=Rented Vehicle Vendor Automation
-globalRentedVehicelsVendorsAgreement=Rented Vehicle Agreement Automation
-globalRentalAgentName=Ejar Rental Agent
-globalAdminRoleName=Ejar Admin Role
-globalFranchiseAdminRole=Franchise Admin Role
-globalFranchiseAdminUserName=FranchiseAdminUser
-globalFranchiseAdminEmail=FranchisAdmin@alwefaq.com
-globalFranchiseRentalAgentRole=Franchise Rental Agent Role
-globalFranchiseBranch=Automation Franchise Branch
-globalFranchiseOrganization=Automation Franchise Organization
-globalRentalRateSchemaName=Automation Schem
-globalDamageMaintainanceLevel=Automation Damage Maintainance Level
-globalSixthExtraName=Unlimited KM
-globalRoadAssistanceDeclineReason=Road Assistance Decline Reasons
-globalTrimLevel=Automation Medium
-globalExternalDriver=Automation External Driver
-globalBrandOneName=Automation Brand One
-globalBrandTwoName=Automation Brand Two
-sourceId=120
-year=2020
-ApiUri=/webapigw/api
-tajeerStatus=false
-newLayout=true
-LoyaltyAPiUrl=/loyaltyapigw/api/app
-
+automationCountryName=Saudi Arabia
+automationCountryNameArabic=السعودية
+automationRegionName=Automation Central Region
+automationCityName=Automation Riyadh
+automationCitySecondName=Automation Alula Second City
+automationFuelTypeName=Automation Gasoline 95
+automationBranchName=Automation Branch
+automationBranchName2=Automation Second Branch
+automationThirdBranchName=Automation Third Branch
+automationNameAutomationLocation=Automation Branch Location
+automationNameAutomationLocationThird=Automation Third Branch Location
+automationCarModelName=Automation Accent
+automationCarModelNameTwo=Automation Accent Two
+automationCarCategoryName=Automation Small Sedan
+automationCarCategoryNameTwo=Automation Small Sedan Two
+automationManufacturerName=Automation Hyundai
+automationSectorName=Automation Sector
+automationVendorName=Automation vendor for vehicles
+automationOrganizationName=Automation organization
+automationClassificationName=Automation Classification
+automationWorkTemplateName=Automation working hours template
+automationLoyalityProgramName=Automation Loyality Program Amyali
+automationAccidentTypeName=Automation accident type
+automationComplaintsCategoryName=Automation complaint category
+automationLoginUserName=ejaradmin
+automationAdminUserName=ejaradmin
+automationEjarAdminEmail=ejaradmin@alwefaq.com
+automationOfferName=Automation Offer Name
+automationFirstExtraName=GPS
+automationSecondExtraName=Automation Child Seat extra
+automationThirdExtraName=Yelo Shield Plus
+automationFourthExtraName=Yelo Shield
+automationFifthExtraName=Unlimited Salik
+automationClassificationNameForBroker=Companies
+automationCancelReasonBySystem=Automation Canceled By System
+automationCancelReasoNotSystem=Automation Customer Driving License expired
+automationSkeletonName=Automation Skeleton
+automationAccidentReportSourceName=Automation Accident Report Source
+automationEstimationPartyName=Automation Estimation Party
+automationTheftRequestRejectionReason=Automation Theft Request Rejection Reason
+automationOtherChargesName=Automation Other Charges
+automationLeasingExtraTypeName=Automation Leasing Extra Type
+automationOplRejectionReasonName=Automation OPL Rejection Reason
+automationBookingAvailabilityName=Automation Booking Availability
+automationLiabilityLevel=Automation Liability Level
+automationColourName=Automation Blue Color
+automationAccidentCancelReason=Automation Accident Cancel Reason
+automationInternalLoyalityProgram=Automation Internal Loyality Program
+automationExternalLoyalty=Automation External Loyalty
+automationFeedbackType=Automation Feedback Type
+automationOccupationName=Automation Occupation Name
+automationLoyaltyProgram=Automation Loyalty Program
+automationTaxConfiguration=Automation Tax Configuration
+automationAccountManager=Automation Account Manager
+automationBankName=Automation Bank Name
+automationRentedVehicelsVendors=Rented Vehicle Vendor Automation
+automationRentedVehicelsVendorsAgreement=Rented Vehicle Agreement Automation
+automationRentalAgentName=Ejar Rental Agent
+automationAdminRoleName=Ejar Admin Role
+automationFranchiseAdminRole=Franchise Admin Role
+automationFranchiseAdminUserName=FranchiseAdminUser
+automationFranchiseAdminEmail=FranchisAdmin@alwefaq.com
+automationFranchiseRentalAgentRole=Franchise Rental Agent Role
+automationFranchiseBranch=Automation Franchise Branch
+automationFranchiseOrganization=Automation Franchise Organization
+automationRentalRateSchemaName=Automation Schem
+automationDamageMaintainanceLevel=Automation Damage Maintainance Level
+automationSixthExtraName=Unlimited KM
+automationRoadAssistanceDeclineReason=Road Assistance Decline Reasons
+automationTrimLevel=Automation Medium
+automationExternalDriver=Automation External Driver
+automationBrandOneName=Automation Brand One
+automationBrandTwoName=Automation Brand Two
