--- a/rentey-automation/rentey-service/src/main/resources/application-1.properties
+++ b/rentey-automation/rentey-service/src/main/resources/application-1.properties
@@ -5,6 +5,7 @@
 
 settings.api.base-url=http://172.86.86.151:2800
 settings.api.api-base-path=/webapigw/api/services/app
+settings.api.api-base-path.without.service=/webapigw/api
 settings.api.headers.tenant-id=1
 settings.api.headers.user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:75.0) Gecko/20100101 Firefox/75.0
 settings.api.headers.accept=application/json
