--- a/rentey-automation/authorization-service/src/main/resources/application.yml
+++ b/rentey-automation/authorization-service/src/main/resources/application.yml
@@ -18,20 +18,7 @@ logging:
     org.springframework.web: INFO
     org.springframework.boot: INFO
 
-authorization:
-  api:
-    base-url: http://172.86.86.151:2800
-    headers:
-      tenant-id: "1"
-      user-agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:75.0) Gecko/20100101 Firefox/75.0"
-      accept: "application/json"
-      accept-language: "en"
-      accept-encoding: "gzip, deflate"
-      pragma: "no-cache"
-      cache-control: "no-cache"
-      expires: "Sat, 01 Jan 2000 00:00:00 GMT"
-      x-requested-with: "XMLHttpRequest"
-      aspnetcore-culture: "en"
-      origin: "http://172.86.86.151:2800"
-      referer: "http://172.86.86.151:2800/"
+# Note: All authorization.api configuration has been removed.
+# baseUrl and headers are now dynamically provided by the requester (rentey-service)
+# in each authentication request. See AuthorizationService.createWebClient() for details.
 
