completing the booking process

--- a/rentey-automation/rentey-service/src/main/resources/user-defined-variables.properties
+++ b/rentey-automation/rentey-service/src/main/resources/user-defined-variables.properties
@@ -71,3 +71,4 @@ automationTrimLevel=Automation Medium
 automationExternalDriver=Automation External Driver
 automationBrandOneName=Automation Brand One
 automationBrandTwoName=Automation Brand Two
+automationYear=2020
